--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Teaching Assistant</h3>
                             <div class="subheading mb-3"><a href="http://cs.unh.edu">Department of Computer Science at UNH</a></div>
+                            Fall 2023
+                            <ul>
+                                <li>CS 750 / 850 - Machine Learning</li>
+                                Sample Teaching Video <a href="https://www.youtube.com/watch?v=K-3hLZmIR00&t=16s"> Beyond Linear Regression Chapter 7-01 ISLR </a>
+                            </ul>
+                            
                             Spring 2020
                             <ul>
                                 <li>CS 520   - Assembly language programming and machine organization</li>
@@ -173,13 +179,13 @@
                             Fall 2019
                             <ul>
                                 <li>CS 410C - Introduction to scientific programming in C</li>
-                                <li>CS 725   - Computer networks </li>
+                                <li>CS 725 / 825  - Computer networks </li>
                             </ul>
                             Spring 2019
                             <ul>
                                 <li>CS 410P - Introduction to scientific programming in Python</li>
                             </ul>
-                            Sample Teaching Video <a href="https://www.youtube.com/watch?v=K-3hLZmIR00&t=16s"> Beyond Linear Regression Chapter 7-01 ISLR </a>
+                            
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Spring 2019 - Spring 2020</span></div>
                     </div>
