--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <ul> 
                                 <li><a href="#publication" onclick="openURL('https://arxiv.org/abs/2304.12477')">On Dynamic Programming Decompositions
                                     of Static Risk Measures in Markov Decision Processes.</a>
-                                    <b>Jia Lin Hau</b>, Erick Delage, Marek Petrik, Mohammad Ghavamzadeh, Arxiv 2023
+                                    <b>Jia Lin Hau</b>, Erick Delage, Marek Petrik, Mohammad Ghavamzadeh, NeurIPS 2023
                                 </li>
                                 <li>
                                     <a href="#publication" onclick="openURL('https://proceedings.mlr.press/v206/lin-hau23a/lin-hau23a.pdf')">Entropic Risk Optimization in Discounted MDPs.</a>
@@ -287,7 +287,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Reviewing Services</h3>
                             <ul> 
-                                <li>International Conference on Machine Learning 2022 (ICML)</li>
+                                <li>Artificial Intelligence and Statistics (AISTATS 2024)</li>
+                                <li>International Conference on Machine Learning (ICML 2022)</li>
                                 <li>NeurIPS 2021 Workshop on Safe and Robust Control of Uncertain Systems</li>
                             </ul>
                         </div>
