--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Reviewing Services</h3>
                             <ul> 
+                                <li>International Conference on Machine Learning (ICML 2024)</li>
+                                <li>Journal of Artificial Intelligence Research (JAIR 2024)</li>
                                 <li>Artificial Intelligence and Statistics (AISTATS 2024)</li>
                                 <li>International Conference on Machine Learning (ICML 2022)</li>
                                 <li>NeurIPS 2021 Workshop on Safe and Robust Control of Uncertain Systems</li>
@@ -413,6 +415,19 @@
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Research</h3>
+                    </div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Received UNH Doctoral Dissertation Year Fellowship (DYF) Scholar Award 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Received NeurIPS 2023 Scholar Award
+                        </li>
+                    </ul>
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Marathon</h3>
                     </div>
