update proposal file

--- a/index.html
+++ b/index.html
@@ -421,7 +421,11 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Received UNH Doctoral Dissertation Year Fellowship (DYF) Scholar Award 
+                            Received UNH Doctoral Dissertation Year Fellowship (DYF) Scholar Award <h3 class="mb-0"><a href="#dyf-proposal-pdf" onclick="togglePDF('dyf-proposal-pdf', 
+                                'https://monkiedein.github.io/CV/assets/documents/DYF-proposal-JiaLinHau.pdf','dyf-proposal')">View Proposal</a> 
+                                <div id="cv-dyf-proposal" style="display:none;">
+                                    <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
+                                </div></h3>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
