add google scholar link

--- a/index.html
+++ b/index.html
@@ -258,7 +258,13 @@
             <!-- Research Work-->
             <section class="resume-section" id="research">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Research</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-0">
+                            <h2 class="mb-5">Research</h2> 
+                        </div>
+                        <div class="flex-grow-1"></div>
+                        <div class="flex-grow-1"><a href="#publication" onclick="openURL('https://scholar.google.com/citations?user=ygX6pZ0AAAAJ')">Google Scholar</a></div>
+                    </div>
                     <div class="flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0" id="publication">Publications and Preprints </h3>
@@ -421,11 +427,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Received UNH Doctoral Dissertation Year Fellowship (DYF) Scholar Award <h3 class="mb-0"><a href="#dyf-proposal-pdf" onclick="togglePDF('dyf-proposal-pdf', 
-                                'https://monkiedein.github.io/CV/assets/documents/DYF-proposal-JiaLinHau.pdf','dyf-proposal')">View Proposal</a> 
-                                <div id="cv-dyf-proposal" style="display:none;">
-                                    <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
-                                </div></h3>
+                            Received UNH Doctoral Dissertation Year Fellowship (DYF) Scholar Award [<a href="https://monkiedein.github.io/CV/assets/documents/DYF-proposal-JiaLinHau.pdf">proposal</a>] 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
