--- a/index.html
+++ b/index.html
@@ -269,10 +269,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0" id="publication">Publications and Preprints </h3>
                             <ul> 
-                                <li><a href="#publication" onclick="openURL('https://arxiv.org/abs/2304.12477')">On Dynamic Programming Decompositions
+                                <li><a href="#publication" onclick="openURL('https://openreview.net/pdf?id=LelK6Mfoey')">On Dynamic Programming Decompositions
                                     of Static Risk Measures in Markov Decision Processes.</a>
                                     <b>Jia Lin Hau</b>, Erick Delage, Marek Petrik, Mohammad Ghavamzadeh, NeurIPS 2023
-                                </li>
+                                </li> <a href="#publication" onclick="togglePDF('EntropicMDPposter', 
+                                'https://monkiedein.github.io/CV/assets/documents/Counterexamples_in_risk_decompositions_poster.pdf','Poster')">View Poster</a>, 
+                                <div id="EntropicMDPposter" style="display:none;">
+                                    <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
+                                </div>
+                                <a href="#publication" onclick="openURL('https://www.youtube.com/watch?v=EwfRB5RTFPo')">View Presentation (YouTube)</a>.
                                 <li>
                                     <a href="#publication" onclick="openURL('https://proceedings.mlr.press/v206/lin-hau23a/lin-hau23a.pdf')">Entropic Risk Optimization in Discounted MDPs.</a>
                                     <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, AISTATS 2023. 
