--- a/index.html
+++ b/index.html
@@ -271,13 +271,15 @@
                             <ul> 
                                 <li><a href="#publication" onclick="openURL('https://openreview.net/pdf?id=LelK6Mfoey')">On Dynamic Programming Decompositions
                                     of Static Risk Measures in Markov Decision Processes.</a>
-                                    <b>Jia Lin Hau</b>, Erick Delage, Marek Petrik, Mohammad Ghavamzadeh, NeurIPS 2023
-                                </li> <a href="#publication" onclick="togglePDF('EntropicMDPposter', 
+                                    <b>Jia Lin Hau</b>, Erick Delage, Marek Petrik, Mohammad Ghavamzadeh, NeurIPS 2023. 
+                                    <a href="#publication" onclick="togglePDF('EntropicMDPposter', 
                                 'https://monkiedein.github.io/CV/assets/documents/Counterexamples_in_risk_decompositions_poster.pdf','Poster')">View Poster</a>, 
                                 <div id="EntropicMDPposter" style="display:none;">
                                     <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
                                 </div>
                                 <a href="#publication" onclick="openURL('https://www.youtube.com/watch?v=EwfRB5RTFPo')">View Presentation (YouTube)</a>.
+                                </li> 
+
                                 <li>
                                     <a href="#publication" onclick="openURL('https://proceedings.mlr.press/v206/lin-hau23a/lin-hau23a.pdf')">Entropic Risk Optimization in Discounted MDPs.</a>
                                     <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, AISTATS 2023. 
