--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jialin-hau/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/MonkieDein"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://gitlab.com/MonkieDein"><i class="fab fa-gitlab"></i></a>
+                        <a class="social-icon" href="https://scholar.google.com/citations?user=ygX6pZ0AAAAJ"><i class="fab fa-google"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/MonkieHau/"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
