--- a/index.html
+++ b/index.html
@@ -293,6 +293,9 @@
                                 <li><a href="#publication" onclick="openURL('https://arxiv.org/abs/2209.04067')">RASR: Risk-Averse Soft-Robust MDPs with EVaR and Entropic Risk.</a>
                                     <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, Reazul Russel, Arxiv 2022
                                 </li>
+                                <li><a href="#publication" onclick="openURL('https://arxiv.org/abs/2410.24128')">Q-learning for Quantile MDPs: A Decomposition, Performance, and Convergence Analysis.</a>
+                                    <b>Jia Lin Hau</b>, Erick Delage, Esther Derman, Mohammad Ghavamzadeh, Marek Petrik, Arxiv 2024
+                                </li>
                             </ul> 
                         </div>
                     </div>
@@ -300,10 +303,10 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Reviewing Services</h3>
                             <ul> 
-                                <li>International Conference on Machine Learning (ICML 2024)</li>
-                                <li>Journal of Artificial Intelligence Research (JAIR 2024)</li>
-                                <li>Artificial Intelligence and Statistics (AISTATS 2024)</li>
-                                <li>International Conference on Machine Learning (ICML 2022)</li>
+                                <li>International Conference on Learning Representation (ICLR 2025)</li>
+                                <li>International Conference on Machine Learning (ICML 2022 and 2024)</li>
+                                <li>Journal of Artificial Intelligence Research (JAIR 2024 and 2025)</li>
+                                <li>Artificial Intelligence and Statistics (AISTATS 2024 and 2025)</li>
                                 <li>NeurIPS 2021 Workshop on Safe and Robust Control of Uncertain Systems</li>
                             </ul>
                         </div>
