--- a/index.html
+++ b/index.html
@@ -157,7 +157,19 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Assistant</h3>
-                            <div class="subheading mb-3">Reinforcement Learning and Robustness Lab</div> 
+                            <div class="subheading mb-3"><a href="https://gitlab.com/RLsquared/group-meetings">Reinforcement Learning and Robustness Lab</a></div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Fall 2020 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">AI / Data Science Summer Associate</h3>
+                            <div class="subheading mb-3"><a href="https://www.jpmorganchase.com/">JP Morgan Chase and Co.</a></div>
+                            <ul>
+                                <li>Proposed novel deep reinforcement learning (RL) approach to find gaps in strategy rules and models.</li>
+                                <li>Developed advanced machine learning (ML) models (i.e. Random Forest, XGBoost, LightGBM, CatBoost, Tab-transformer) and compared different encodings and imputations for fraud prediction.</li>
+                                <li>Developed code on AWS Cloud (SageMaker, Bitbucket), and utilized PySpark, Hadoop, EMR to optimize code for big data.</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Fall 2020 - Present</span></div>
                     </div>
@@ -165,7 +177,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Teaching Assistant</h3>
                             <div class="subheading mb-3"><a href="http://cs.unh.edu">Department of Computer Science at UNH</a></div>
-                            Fall 2023
+                            Fall & Spring 2023
                             <ul>
                                 <li>CS 750 / 850 - Machine Learning</li>
                                 Sample Teaching Video <a href="https://www.youtube.com/watch?v=K-3hLZmIR00&t=16s"> Beyond Linear Regression Chapter 7-01 ISLR </a>
@@ -187,13 +199,13 @@
                             </ul>
                             
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Spring 2019 - Spring 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Spring 2019 - Spring 2023</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Data Analyst</h3>
-                            <div class="subheading mb-3">Boston Road Runner (BRR)</div>
+                            <div class="subheading mb-3"><a href="https://www.bostonroadrunners.org/">Boston Road Runner (BRR)</a></div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sep 2019 - Dec 2019</span></div>
                     </div>
@@ -207,7 +219,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Junior Instructor & Summer Camp Resident Assistant</h3>
-                            <div class="subheading mb-3">Idea Math</div>
+                            <div class="subheading mb-3"><a href="https://ideamath.education/landing/overview">Idea Math</a></div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jun 2018 - Aug 2019</span></div>
                     </div>
