--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                                 <li>Developed code on AWS Cloud (SageMaker, Bitbucket), and utilized PySpark, Hadoop, EMR to optimize code for big data.</li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Fall 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Summer 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Teaching Assistant</h3>
                             <div class="subheading mb-3"><a href="http://cs.unh.edu">Department of Computer Science at UNH</a></div>
-                            Fall & Spring 2023
+                            Fall & Spring 2023 , Spring 2024
                             <ul>
                                 <li>CS 750 / 850 - Machine Learning</li>
                                 Sample Teaching Video <a href="https://www.youtube.com/watch?v=K-3hLZmIR00&t=16s"> Beyond Linear Regression Chapter 7-01 ISLR </a>
@@ -199,7 +199,7 @@
                             </ul>
                             
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Spring 2019 - Spring 2023</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Spring 2019 - Spring 2024</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between">
