--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
+                    <h3 class="mb-0">University of New Hampshire</h3>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of New Hampshire</h3>
                             <div class="subheading mb-3">Ph.D. in Computer Science</div>
                             <div>Reinforcement Learning and Robustness Lab (RLsquared)</div>
                             <p>GPA: 4.0/4.0</p>
@@ -81,7 +81,6 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 id="MS-title" class="mb-0">University of New Hampshire</h3>
                             <div class="subheading mb-3">M.S. in Computer Science. 
                                 <a href="#MS-title" onclick="togglePDF('MSdiploma', 
                                 'https://monkiedein.github.io/CV/assets/documents/CeDiD 23ZJ-41VZ-JGUS Ji.pdf','Diploma')">View Diploma</a> 
@@ -95,7 +94,6 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 id="BS-title" class="mb-0">University of New Hampshire</h3>
                             <div class="subheading mb-3"> B.S. in Applied Mathematics: Economics.
                                 <a href="#BS-title" onclick="togglePDF('BSdiploma', 
                                 'https://monkiedein.github.io/CV/assets/documents/CeDiD 189A-B83B-J9U5 Ji.pdf','Diploma')">View Diploma</a> 
@@ -122,19 +120,20 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
-                    Latex, R, git, Markdown, bash, Python, C, C++, mySQL, Html, Matlab, Julia, JMP, Tableau, Excel.
+                    AWS, Python, Matlab, Julia, Latex, R, git, Markdown, bash, C, C++, mySQL, Html, JMP, Tableau, Excel.
                     <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fab fa-aws"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><i class="devicon-matlab-plain"></i></i></li>
+                        <li class="list-inline-item"><i class="devicon-julia-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-latex-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-r-plain"></i></li>
                         <li class="list-inline-item"><i class="fab fa-git"></i></li>
                         <li class="list-inline-item"><i class="devicon-markdown-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-bash-plain"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li class="list-inline-item"><i class="devicon-c-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-mysql-plain"></i></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="devicon-matlab-plain"></i></i></li>
-                        <li class="list-inline-item"><i class="devicon-julia-plain"></i></li>
                         <li class="list-inline-item"><i class="fa fa-file-excel"></i></li>
                     </ul>
                     <div class="subheading mb-3">Coursework</div>
@@ -336,7 +335,7 @@
                         <div id="EMOAI-title" class="d-flex flex-column flex-md-row justify-content-between">
                             <h4 class="mb-0">EMOAI</h4> 
                             <p>Developer and Use Case Finder</p>
-                            <div class="subheading mb-4">Shayan Amani, Chao Chi Cheng, Jia Lin Hau, Lekyang Sai</div>
+                            <div class="subheading mb-4">Shayan Amani, Chao Chi Cheng, <b>Jia Lin Hau</b>, Lekyang Sai</div>
                             <div class="flex-shrink-0"><span class="text-primary">Spring 2019</span></div>
                         </div>
                         <p>Emotion recognition application to avoid depression.
@@ -367,7 +366,7 @@
                         <div id="CRACC-title" class="d-flex flex-column flex-md-row justify-content-between">
                             <h4 class="mb-0">CRACC</h4> 
                             <p>Analyst / Android Developer</p>
-                            <div class="subheading mb-4">Khoi Nguyễn (Danny), Chao Chi Cheng, Nicolas Câmara, Jia Lin Hau</div>
+                            <div class="subheading mb-4">Khoi Nguyễn (Danny), Chao Chi Cheng, Nicolas Câmara, <b>Jia Lin Hau</b></div>
                             <div class="flex-shrink-0"><span class="text-primary">Jan 2017 - Jan 2018</span></div>
                         </div>
                         A social application that connect people to play sports together.
@@ -386,7 +385,7 @@
                         <h3 class="mb-0">Class Project</h3>
                         <div id="MAB-title" class="d-flex flex-column flex-md-row justify-content-between">
                             <h4 class="mb-0">Multi Arm Bandits Basic Algorithms Comparison</h4> 
-                            <div class="subheading mb-4">Jia Lin Hau</div>
+                            <div class="subheading mb-4"><b>Jia Lin Hau</b></div>
                             <div class="flex-shrink-0"><span class="text-primary">Fall 2021</span></div>
                         </div>
                         Explored Multi Arm Bandits (MAB) algorithms and their performance in adversarial domain. We obtained two conclusions from the
@@ -400,7 +399,7 @@
                         <p></p><p></p>
                         <div id="Cartpole-title" class="d-flex flex-column flex-md-row justify-content-between">
                             <h4 class="mb-0">Bayesian MDP solved Cartpole with limited data</h4> 
-                            <div class="subheading mb-4">Jia Lin Hau</div>
+                            <div class="subheading mb-4"><b>Jia Lin Hau</b></div>
                             <div class="flex-shrink-0"><span class="text-primary">Fall 2019</span></div>
                         </div>
                         Applied regression model with STAN Bayesian probabilistic program to handle problem with limited data. Demonstrated it with Cartpole (OpenAI gym domain).
@@ -412,7 +411,7 @@
                         <p></p><p></p>
                         <div id="cryptocurrency-title" class="d-flex flex-column flex-md-row justify-content-between">
                             <h4 class="mb-0">Cryptocurrency Analytics</h4> 
-                            <div class="subheading mb-4">Jia Lin Hau, Gerasimos Mouikis, Spencer Pope</div>
+                            <div class="subheading mb-4"><b>Jia Lin Hau</b>, Gerasimos Mouikis, Spencer Pope</div>
                             <div class="flex-shrink-0"><span class="text-primary">Spring 2018</span></div>
                         </div>
                         Predicted cryptocurrency with time series analysis method Vector Auto Regression (VAR) on the log return of the closing price. 
@@ -424,7 +423,7 @@
                         <p></p><p></p>
                         <div id="BJ-title" class="d-flex flex-column flex-md-row justify-content-between">
                             <h4 class="mb-0">Solve Blackjack with MDPs</h4> 
-                            <div class="subheading mb-4">Jia Lin Hau, Marek Petrik</div>
+                            <div class="subheading mb-4"><b>Jia Lin Hau</b>, Marek Petrik</div>
                             <div class="flex-shrink-0"><span class="text-primary">Spring 2018</span></div>
                         </div>
                         Utilized MDP (Value Iteration) to solve for the optimal action (Stand, Hit, Split, Double, or Surrender) for BlackJack with R. 
