--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Tutor</h3>
-                            <div class="subheading mb-3">UNH Mathematics Center</div>
+                            <div class="subheading mb-3"><a href="https://ceps.unh.edu/mathematics-statistics/mathematics-center-mac">UNH Mathematics Center</a></div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Aug 2017 - Jun 2018</span></div>
                     </div>
