--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
                     </ul>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Residential Assistant  </h3>
-                            <div class="subheading mb-3">UNH Upper Quad</div>
+                            <h3 class="mb-0">Residential Assistant</h3>
+                            <div class="subheading mb-3"><a href="https://www.unh.edu/housing/">UNH Housing & Residential Life</a></div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Aug 2016 - Jun 2017</span></div>
                     </div>
