Update Quantile MDp analysis reference to AISTATS accepted

--- a/index.html
+++ b/index.html
@@ -280,6 +280,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0" id="publication">Publications and Preprints </h3>
                             <ul> 
+                                <li><a href="#publication" onclick="openURL('https://arxiv.org/abs/2410.24128')">Q-learning for Quantile MDPs: A Decomposition, Performance, and Convergence Analysis.</a>
+                                    <b>Jia Lin Hau</b>, Erick Delage, Esther Derman, Mohammad Ghavamzadeh, Marek Petrik, AISTATS 2025
+                                </li>
                                 <li><a href="#publication" onclick="openURL('https://openreview.net/pdf?id=LelK6Mfoey')">On Dynamic Programming Decompositions
                                     of Static Risk Measures in Markov Decision Processes.</a>
                                     <b>Jia Lin Hau</b>, Erick Delage, Marek Petrik, Mohammad Ghavamzadeh, NeurIPS 2023. 
@@ -303,9 +306,6 @@
                                 </li> 
                                 <li><a href="#publication" onclick="openURL('https://arxiv.org/abs/2209.04067')">RASR: Risk-Averse Soft-Robust MDPs with EVaR and Entropic Risk.</a>
                                     <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, Reazul Russel, Arxiv 2022
-                                </li>
-                                <li><a href="#publication" onclick="openURL('https://arxiv.org/abs/2410.24128')">Q-learning for Quantile MDPs: A Decomposition, Performance, and Convergence Analysis.</a>
-                                    <b>Jia Lin Hau</b>, Erick Delage, Esther Derman, Mohammad Ghavamzadeh, Marek Petrik, Arxiv 2024
                                 </li>
                             </ul> 
                         </div>
