--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                             <h3 class="mb-0">Reviewing Services</h3>
                             <ul> 
                                 <li>International Conference on Learning Representation (ICLR 2025)</li>
-                                <li>International Conference on Machine Learning (ICML 2022 and 2024)</li>
+                                <li>International Conference on Machine Learning (ICML 2022, 2024 and 2025)</li>
                                 <li>Journal of Artificial Intelligence Research (JAIR 2024 and 2025)</li>
                                 <li>Artificial Intelligence and Statistics (AISTATS 2024 and 2025)</li>
                                 <li>NeurIPS 2021 Workshop on Safe and Robust Control of Uncertain Systems</li>
