Update Neurips review and cv added thesis title

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                 <li>International Conference on Machine Learning (ICML 2022, 2024 and 2025)</li>
                                 <li>Journal of Artificial Intelligence Research (JAIR 2024 and 2025)</li>
                                 <li>Artificial Intelligence and Statistics (AISTATS 2024 and 2025)</li>
-                                <li>NeurIPS 2021 Workshop on Safe and Robust Control of Uncertain Systems</li>
+                                <li>Conference and workshop on Neural Information Processing Systems (NeurIPS 2021 and 2025)</li>
                             </ul>
                         </div>
                     </div>
